Added new endpoint for categories
