# routes/api.php
@@ -27,6 +27,7 @@ Route::group(
     ['prefix' => 'public'],
     function () {
         Route::get('articles', PublicController::class)->name('articles');
+        Route::get('categories', 'App\Http\Controllers\PublicController@showAllCategories');
         Route::get('articles/{slug}', 'App\Http\Controllers\PublicController@showArticleBySlug');
         Route::get('articles/category/{slug}', 'App\Http\Controllers\PublicController@showArticlesByCategory');
         Route::get('articles/tags/{slug}', 'App\Http\Controllers\PublicController@showArticlesByTag');
