# storage/api-docs/api-docs.json
@@ -715,6 +715,30 @@
                 }
             }
         },
+        "/public/categories": {
+            "get": {
+                "tags": [
+                    "Public"
+                ],
+                "summary": "Get all article categories",
+                "description": "Returns list of article category data",
+                "operationId": "showAllCategories",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/tags": {
             "get": {
                 "tags": [
